# ocaml-dns-forward

./: dns-forward-lwt-unix.opam  dns-forward.opam  dune-project
lib/: dns_forward_config.ml  dns_forward_free_id.ml  dune
lib_test/: dune  test.ml
lwt/: dune
