opam-version: "2.0"
maintainer:   "dave@recoil.org"
authors:      ["David Scott"]
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-dns-forward"
bug-reports:  "https://github.com/mirage/ocaml-dns-forward/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns-forward.git"
doc:          "https://mirage.github.io/ocaml-dns-forward/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "dns-forward" {>= "0.9.0" & < "0.10.0"}
  "lwt" {>= "2.7.0"}
  "cstruct-lwt" {>= "3.0.0"}
  "io-page-unix" {>= "2.0.0"}
  "mirage-clock-unix"
  "alcotest" {with-test}
]
synopsis: "Lwt implementation for the `dns-forward` library"
