opam-version: "2.0"
maintainer:   "dave@recoil.org"
authors:      ["David Scott"]
license:      "ISC"
homepage:     "https://github.com/mirage/ocaml-dns-forward"
bug-reports:  "https://github.com/mirage/ocaml-dns-forward/issues"
dev-repo: "git+https://github.com/mirage/ocaml-dns-forward.git"
doc:          "https://mirage.github.io/ocaml-dns-forward/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "cstruct" {>= "3.0.0"}
  "logs" {>= "0.5.0"}
  "lwt" {>= "2.7.0"}
  "mirage-flow-lwt" {>= "1.2.0"}
  "mirage-clock-lwt"
  "mirage-channel-lwt"
  "mirage-time-lwt"
  "duration"
  "dns" {< "2.0.0"}
  "rresult"
  "astring"
  "fmt"
  "result"
  "mtime"
  "ipaddr" {< "3.0.0"}
]
synopsis: "Library and tools for creating forwarding DNS servers"
description: """
Features:

- UDP and TCP DNS forwarding
- support for sending queries to specific servers based on domain
- dynamic configuration updates
- extra records (e.g. from /etc/hosts)"""
